--- a/rootdir/etc/init.mt6768.rc
+++ b/rootdir/etc/init.mt6768.rc
@@ -1083,7 +1083,8 @@ service osi /system/bin/osi
     #seclabel u:r:osi:s0
 
 #BSP:add custom factory reset KFLHLEYJ-8 by wang.qin 20201026 start
-on property:persist.vendor.tran.wipedata=1 && property:ro.boot.atm=enable
-    tran_factory_reset
+# time to comment useless shit-
+#on property:persist.vendor.tran.wipedata=1 && property:ro.boot.atm=enable
+#    tran_factory_reset
 #BSP:add custom factory reset KFLHLEYJ-8 by wang.qin 20201026 end
 
